kubernetes/apps/home-automation/filebrowser/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
  namespace: home-automation

spec:
  replicas: 1
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser

    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 1000

      containers:
        - name: filebrowser
          image: filebrowser/filebrowser:s6
          ports:
            - containerPort: 80
          securityContext:
            allowPrivilegeEscalation: true

          resources:
            limits:
              memory: 800Mi
              cpu: 400m

          volumeMounts:
            - name: movies
              mountPath: srv/movies
            - name: series
              mountPath: srv/series
            - name: filebrowser-db
              mountPath: filebrowser/database
            - name: filebrowser-config
              mountPath: filebrowser/config/settings.json
              subPath: settings.json

      volumes:
        - name: homelab-storage
          persistentVolumeClaim:
            claimName: homelab-nfs-pvc
